--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css" />
+    <script src="scripts/main.js"></script>
         <title>BetterMotherFuckingWebsite2</title>
   </head>
 
   <body>
       <h1>This is <em>still</em> a motherfucking website.</h1>
+
+      <a href="javascript:popup ('https://www.francetvinfo.fr/image/759r5hfru-71cb/580/326/10507499.jpg')">Hey le site xxxvidsxxx est trop bien </a>*/Popup
 
             <p>And it's more fucking perfect than the last guy's.</p>
         <h2>Seriously, it takes minimal fucking efforts to improve this shit</h2>
