--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
       <h1>This is <em>still</em> a motherfucking website.</h1>
 
-      <span class="popup"><a href="javascript:popup ('https://www.francetvinfo.fr/image/759r5hfru-71cb/580/326/10507499.jpg')">Hey le site xxxvidsxxx est trop bien </a></span>*/Popup
+      <span class="popup"> Hey le site xxxvidsxxx est trop bien</span>
 
             <p>And it's more fucking perfect than the last guy's.</p>
         <h2>Seriously, it takes minimal fucking efforts to improve this shit</h2>
