--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <link rel="stylesheet" href="style.css" />
     <script src="scripts/main.js"></script>
         <title>BetterMotherFuckingWebsite2</title>
+          <div class="popup">
+            <p>Ce site est génial !<br/> Tu veux voire ?<br/><a href="https://medias.lagranderecre.fr/imgs/1/1200x1200/703139V01_01_7.jpg">Non </a><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Oui</a></p>
+          </div>
   </head>
 
   <body>
       <h1>This is <em>still</em> a motherfucking website.</h1>
-
-      <span class="popup"> Hey le site xxxvidsxxx est trop bien</span>
 
             <p>And it's more fucking perfect than the last guy's.</p>
         <h2>Seriously, it takes minimal fucking efforts to improve this shit</h2>
