final popup choix

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <script src="scripts/main.js"></script>
         <title>BetterMotherFuckingWebsite2</title>
           <div class="popup">
-            <p>Ce site est génial !<br/> Tu veux voire ?<br/><a href="https://medias.lagranderecre.fr/imgs/1/1200x1200/703139V01_01_7.jpg">Non </a><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Oui</a></p>
+            <p>Ce site est génial !<br/> Tu veux voire ?<br/><a href="javascript:popupOui('https://www.youtube.com/watch?v=dQw4w9WgXcQ.html')">Oui </a><a href="javascript:popupNon('https://medias.lagranderecre.fr/imgs/1/1200x1200/703139V01_01_7.jpg')">Non</a></p>
           </div>
+
   </head>
 
   <body>
